snake/last_unittest_run.log
..............FF.F.E
======================================================================
ERROR: test_snake (unittest.loader._FailedTest.test_snake)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_snake
Traceback (most recent call last):
  File "/usr/lib/python3.14/unittest/loader.py", line 426, in _find_test_path
    module = self._get_module_from_name(name)
  File "/usr/lib/python3.14/unittest/loader.py", line 367, in _get_module_from_name
    __import__(name)
    ~~~~~~~~~~^^^^^^
  File "/home/buyn/Dev/aider-sandbox/snake/tests/test_snake.py", line 1
    // ... lines 1-14 unchanged ...
    ^^
SyntaxError: invalid syntax


======================================================================
FAIL: test_update_game_food_eaten (test_game.TestGame.test_update_game_food_eaten)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/buyn/Dev/aider-sandbox/snake/tests/test_game.py", line 134, in test_update_game_food_eaten
    self.mock_food.spawn.assert_called_once_with(self.mock_snake.get_body.return_value)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.14/unittest/mock.py", line 996, in assert_called_once_with
    raise AssertionError(msg)
AssertionError: Expected 'spawn' to be called once. Called 2 times.
Calls: [call([]), call([(1, 3)])].

======================================================================
FAIL: test_update_game_self_collision (test_game.TestGame.test_update_game_self_collision)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/buyn/Dev/aider-sandbox/snake/tests/test_game.py", line 148, in test_update_game_self_collision
    self.mock_food.spawn.assert_not_called()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/usr/lib/python3.14/unittest/mock.py", line 946, in assert_not_called
    raise AssertionError(msg)
AssertionError: Expected 'spawn' to not have been called. Called 1 times.
Calls: [call([])].

======================================================================
FAIL: test_update_game_when_not_paused_and_not_over (test_game.TestGame.test_update_game_when_not_paused_and_not_over)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/buyn/Dev/aider-sandbox/snake/tests/test_game.py", line 119, in test_update_game_when_not_paused_and_not_over
    self.mock_food.spawn.assert_not_called()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/usr/lib/python3.14/unittest/mock.py", line 946, in assert_not_called
    raise AssertionError(msg)
AssertionError: Expected 'spawn' to not have been called. Called 1 times.
Calls: [call([])].

----------------------------------------------------------------------
Ran 20 tests in 0.031s

FAILED (failures=3, errors=1)
Coder session is Done
